SpiderData/jianshu/Clean/00332.txt
qcustomplot是qt一个好用的图形绘制库，最近更新qt版本到6.2.4后，发现原先的qcustomplot会报错，报错原因如下：

MinGW_64_bit-Debug\debug\moc_qcustomplot.cpp:249: error: template argument 1 is invalid

debug\moc_qcustomplot.cpp:249:54: error: template argument 1 is invalid

249 | , QtPrivate::TypeAndForceComplete<QCP, std::true_type>

|                                                      ^

官网上找到了解决方法，分享一下，直接使用以下我分享的qcustomplot.h文件替换掉项目中的qcustomplot.h即可(个人建议:构建设置里面不选影子构建)。

百度网盘分享:提取码：nan3

30天，失效可补。觉得有用的话点个赞吧。

